5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1747_1540.log
== TEST (2019-05-16 10:06:47) 
-- CODE:
from math import*
x=eval(input("escreva: "))

soma
i=0
fim=0

while(i>fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2i)
	i=i+1
	
print(soma)
-- ERROR:
File "XXXX", line 9
    soma=soma+(-1)**(i)*(x**i)/factorial(2i)
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:07:55) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=1
i=0
fim=k+1

while(i>fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2i)
	i=i+1
	
print(soma)
-- ERROR:
File "XXXX", line 10
    soma=soma+(-1)**(i)*(x**i)/factorial(2i)
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:08:09) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=1
i=0
fim=k+1

while(i>fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(soma)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:08:40) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i>fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(soma)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:10:31) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=1
i=0
fim=k+1

while(i>fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:10:52) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i>fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:11:26) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))


i=0
fim=k+1

while(i>fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(soma, 6))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:11:52) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))


i=0
fim=k+1

while(i>fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(soma, 6))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:12:30) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=k
i=0
fim=k+1

while(i>fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:16:48) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=1
i=0
fim=k+1

while(i<fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- OUTPUT:
1.443959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:17:08) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- OUTPUT:
0.443959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:17:20) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.159008
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.443959
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.870192
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:17:39) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- OUTPUT:
0.443959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:18:08) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.175154
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.444017
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.826085
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:18:09) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- OUTPUT:
0.444017
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:18:10) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.155915
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.444017
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.826085
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
escreva: escreva: 0.312176
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:18:33) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- OUTPUT:
0.443959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:18:48) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- OUTPUT:
0.443959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:19:18) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=1
fim=k+1

while(i<fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.220645
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
-0.556041
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-1.870192
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
-0.687824
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:19:21) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.167781
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.443959
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.870192
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:19:25) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=1
i=0
fim=k+1

while(i<fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.149622
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
1.443959
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
0.129808
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
1.312176
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:19:26) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=1
i=0
fim=k+1

while(i<fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.204173
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
1.443959
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
0.129808
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
1.312176
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:19:29) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.15542
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.443959
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
escreva: escreva: -0.870192
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
escreva: escreva: 0.312176
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:19:31) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.154492
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.443959
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.870192
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:19:39) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*(x**i)/factorial(2*i)
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.212278
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.444017
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.826085
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:00) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*(x**i)/(factorial(2*i))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.173394
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.444017
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.826085
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:01) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*(x**i)/(factorial(2*i))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.199715
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.444017
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.826085
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:04) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*(x**i)/(factorial(2*i))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.170803
-- ERROR:
  File "/home/codebench/codes/1747/1540/main.py", line 5
    soma=
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:06) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=1
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*(x**i)/(factorial(2*i))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.178987
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
1.444017
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
0.173915
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
1.312176
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:07) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=1
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*(x**i)/(factorial(2*i))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.152808
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
1.444017
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
0.173915
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
1.312176
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:09) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*(x**i)/(factorial(2*i))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.163304
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.444017
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.826085
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:13) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=1
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*(x**i)/(factorial(2*i))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.159743
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
-0.555983
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-1.826085
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
-0.687824
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:14) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=1
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*(x**i)/(factorial(2*i))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.136713
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
-0.555983
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-1.826085
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
-0.687824
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:20) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k

while(i<=fim):
	soma=soma+(-1)**(i)*(x**i)/(factorial(2*i))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.223364
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.443959
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.870192
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:22) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k

while(i<=fim):
	soma=soma+(-1)**(i)*(x**i)/(factorial(2*i))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.138483
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.443959
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.870192
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:42) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k

while(i<=fim):
	soma=soma+(-1)**(i)*((x**i)/(factorial(2*i)))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.208171
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.443959
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.870192
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:44) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k

while(i<=fim):
	soma=soma+(-1)**(i)*((x**i)/(factorial(2*i)))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.200227
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.443959
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.870192
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:48) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*((x**i)/(factorial(2*i)))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.179817
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.444017
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.826085
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:48) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*((x**i)/(factorial(2*i)))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.158526
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.444017
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.826085
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
escreva: escreva: 0.312176
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:51) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*((x**i)/(factorial(2*i)))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.132334
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.444017
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.826085
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:20:52) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*((x**i)/(factorial(2*i)))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.158274
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.444017
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.826085
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:20:53) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*((x**i)/(factorial(2*i)))
	i=i+1
	
print(round(soma, 6))
-- OUTPUT:
0.444017
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:21:06) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*((x**i)/(factorial(2*i)))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.142471
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.444017
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.826085
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:21:13) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*((x**i)/(factorial(2*i)))
	i=i+1
	
print(round(soma, 6))
-- OUTPUT:
0.444017
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:21:27) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<=fim):
	soma=soma+(-1)**(i)*((x**i)/(factorial(2*i)))
	i=i+1
	
print(round(soma, 6))
-- OUTPUT:
0.444017
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:21:46) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k+1

while(i<fim):
	soma=soma+(-1)**(i)*((x**i)/(factorial(2*i)))
	i=i+1
	
print(round(soma, 6))
-- OUTPUT:
0.443959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:22:17) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k

while(i<fim):
	soma=soma+(-1)**(i)*((x**i)/(factorial(2*i)))
	i=i+1
	
print(round(soma, 6))
-- OUTPUT:
0.446567
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:22:27) 
-- CODE:
from math import*
x=eval(input("escreva: "))
k=int(input("escreva: "))

soma=0
i=0
fim=k

while(i<fim):
	soma=soma+(-1)**(i)*((x**i)/(factorial(2*i)))
	i=i+1
	
print(round(soma, 6))
-- EXECUTION TIME:
0.202664
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.446567
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.489834
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
